--- a/bikes.ipynb
+++ b/bikes.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2594fd99",
+   "id": "3ee26037",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f5f4925",
+   "id": "1a864f6f",
    "metadata": {},
    "source": [
     "# Анализ данных об аренде велосипедов в Чикаго"
@@ -21,16 +21,16 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "162008a4",
+   "id": "f5d4abd4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "bikes_q1 = pd.read_csv(bikes_q1, parse_dates=['start_time','end_time'] )"
+    "bikes_q1 = pd.read_csv(bikes_q1, parse_dates=['start_time','end_time'])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "10855776",
+   "id": "eedabab6",
    "metadata": {},
    "source": [
     "Для начала, возьмем данные только за Q1 <br>\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "15c1ea06",
+   "id": "6aeae961",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "eeb03c53",
+   "id": "b049111f",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6e544fd5",
+   "id": "763e58e5",
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5616c9c5",
+   "id": "a351bdab",
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ce2e844",
+   "id": "e629e08f",
    "metadata": {},
    "source": [
     "#### Перед тем как сделать .resample(), немного подготовим данные. Поместим колонку start_time в качестве индексов и сохраните изменения в исходный датасет."
@@ -306,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "3bd17234",
+   "id": "60b593c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "25caf98c",
+   "id": "6032cda5",
    "metadata": {},
    "outputs": [
     {
@@ -487,16 +487,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4aaf1908",
+   "id": "657618bf",
    "metadata": {},
    "source": [
-    "#### В данных имеется как дата аренды, так и её точное время начала и окончания с точностью до секунд. Применим метод pd.resample() и агрегируем данные по дням. Посмотрим максимальное число аренд за день"
+    "#### 1. В данных имеется как дата аренды, так и её точное время начала и окончания с точностью до секунд. Применим метод pd.resample() и агрегируем данные по дням. Посмотрим максимальное число аренд за день"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "88e27611",
+   "id": "841b52b0",
    "metadata": {},
    "outputs": [
     {
@@ -528,16 +528,311 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4f717fa",
+   "id": "a6896c43",
    "metadata": {},
    "source": [
     "**Вывод:** максимально число аренд за день  было 27 февраля и составляло 4196"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "98f397a7",
+   "metadata": {},
+   "source": [
+    "#### 2. Посмотрим на распределение количества аренд для разных групп пользователей (usertype) — customers и subscribers в данных за апрель\n",
+    "\n",
+    "Сделаем ресемпл по дням для каждой группы и в качестве ответа укажем число аренд за 18 апреля, сделанных пользователями типа Subscribe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "8bf44137",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bikes_apr = pd.read_csv(bikes_apr, parse_dates=['start_time','end_time'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "c95caa2a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bikes_apr.set_index('start_time', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "0dd35058",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>trip_id</th>\n",
+       "      <th>end_time</th>\n",
+       "      <th>bikeid</th>\n",
+       "      <th>tripduration</th>\n",
+       "      <th>from_station_id</th>\n",
+       "      <th>from_station_name</th>\n",
+       "      <th>to_station_id</th>\n",
+       "      <th>to_station_name</th>\n",
+       "      <th>usertype</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>birthyear</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>start_time</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2018-04-01 00:17:00</th>\n",
+       "      <td>18000534</td>\n",
+       "      <td>2018-04-01 00:22:53</td>\n",
+       "      <td>1323</td>\n",
+       "      <td>353.0</td>\n",
+       "      <td>130</td>\n",
+       "      <td>Damen Ave &amp; Division St</td>\n",
+       "      <td>69</td>\n",
+       "      <td>Damen Ave &amp; Pierce Ave</td>\n",
+       "      <td>Subscriber</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>1991.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-04-01 00:20:00</th>\n",
+       "      <td>18000536</td>\n",
+       "      <td>2018-04-01 00:26:22</td>\n",
+       "      <td>2602</td>\n",
+       "      <td>382.0</td>\n",
+       "      <td>121</td>\n",
+       "      <td>Blackstone Ave &amp; Hyde Park Blvd</td>\n",
+       "      <td>351</td>\n",
+       "      <td>Cottage Grove Ave &amp; 51st St</td>\n",
+       "      <td>Subscriber</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>1992.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-04-01 00:23:19</th>\n",
+       "      <td>18000538</td>\n",
+       "      <td>2018-04-01 00:35:01</td>\n",
+       "      <td>4213</td>\n",
+       "      <td>702.0</td>\n",
+       "      <td>31</td>\n",
+       "      <td>Franklin St &amp; Chicago Ave</td>\n",
+       "      <td>180</td>\n",
+       "      <td>Ritchie Ct &amp; Banks St</td>\n",
+       "      <td>Subscriber</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>1985.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-04-01 00:24:46</th>\n",
+       "      <td>18000540</td>\n",
+       "      <td>2018-04-01 00:44:23</td>\n",
+       "      <td>6401</td>\n",
+       "      <td>1,177.0</td>\n",
+       "      <td>596</td>\n",
+       "      <td>Benson Ave &amp; Church St</td>\n",
+       "      <td>517</td>\n",
+       "      <td>Clark St &amp; Jarvis Ave</td>\n",
+       "      <td>Subscriber</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>1974.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-04-01 00:26:04</th>\n",
+       "      <td>18000541</td>\n",
+       "      <td>2018-04-01 00:31:05</td>\n",
+       "      <td>6333</td>\n",
+       "      <td>301.0</td>\n",
+       "      <td>145</td>\n",
+       "      <td>Mies van der Rohe Way &amp; Chestnut St</td>\n",
+       "      <td>24</td>\n",
+       "      <td>Fairbanks Ct &amp; Grand Ave</td>\n",
+       "      <td>Subscriber</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>1984.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      trip_id            end_time  bikeid tripduration  \\\n",
+       "start_time                                                               \n",
+       "2018-04-01 00:17:00  18000534 2018-04-01 00:22:53    1323        353.0   \n",
+       "2018-04-01 00:20:00  18000536 2018-04-01 00:26:22    2602        382.0   \n",
+       "2018-04-01 00:23:19  18000538 2018-04-01 00:35:01    4213        702.0   \n",
+       "2018-04-01 00:24:46  18000540 2018-04-01 00:44:23    6401      1,177.0   \n",
+       "2018-04-01 00:26:04  18000541 2018-04-01 00:31:05    6333        301.0   \n",
+       "\n",
+       "                     from_station_id                    from_station_name  \\\n",
+       "start_time                                                                  \n",
+       "2018-04-01 00:17:00              130              Damen Ave & Division St   \n",
+       "2018-04-01 00:20:00              121      Blackstone Ave & Hyde Park Blvd   \n",
+       "2018-04-01 00:23:19               31            Franklin St & Chicago Ave   \n",
+       "2018-04-01 00:24:46              596               Benson Ave & Church St   \n",
+       "2018-04-01 00:26:04              145  Mies van der Rohe Way & Chestnut St   \n",
+       "\n",
+       "                     to_station_id              to_station_name    usertype  \\\n",
+       "start_time                                                                    \n",
+       "2018-04-01 00:17:00             69       Damen Ave & Pierce Ave  Subscriber   \n",
+       "2018-04-01 00:20:00            351  Cottage Grove Ave & 51st St  Subscriber   \n",
+       "2018-04-01 00:23:19            180        Ritchie Ct & Banks St  Subscriber   \n",
+       "2018-04-01 00:24:46            517        Clark St & Jarvis Ave  Subscriber   \n",
+       "2018-04-01 00:26:04             24     Fairbanks Ct & Grand Ave  Subscriber   \n",
+       "\n",
+       "                     gender  birthyear  \n",
+       "start_time                              \n",
+       "2018-04-01 00:17:00    Male     1991.0  \n",
+       "2018-04-01 00:20:00  Female     1992.0  \n",
+       "2018-04-01 00:23:19    Male     1985.0  \n",
+       "2018-04-01 00:24:46    Male     1974.0  \n",
+       "2018-04-01 00:26:04    Male     1984.0  "
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bikes_apr.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "c7df814e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>start_time</th>\n",
+       "      <th>trip_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2018-04-01</td>\n",
+       "      <td>549</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2018-04-02</td>\n",
+       "      <td>1865</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2018-04-03</td>\n",
+       "      <td>1276</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2018-04-04</td>\n",
+       "      <td>1501</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2018-04-05</td>\n",
+       "      <td>1637</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  start_time  trip_id\n",
+       "0 2018-04-01      549\n",
+       "1 2018-04-02     1865\n",
+       "2 2018-04-03     1276\n",
+       "3 2018-04-04     1501\n",
+       "4 2018-04-05     1637"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bikes_april = bikes_apr.query(\"usertype == 'Subscriber'\")\\\n",
+    "                        .trip_id\\\n",
+    "                        .resample('1d')\\\n",
+    "                        .count()\\\n",
+    "                        .to_frame()\\\n",
+    "                        .reset_index()\n",
+    "bikes_april.head()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "023bc260",
+   "id": "7702af7f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ff1f275",
    "metadata": {},
    "outputs": [],
    "source": []
