--- a/bikes.ipynb
+++ b/bikes.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "57137649",
+   "id": "9157c335",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4387648f",
+   "id": "e7c420ed",
    "metadata": {},
    "source": [
     "# Анализ данных об аренде велосипедов в Чикаго"
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "48124f57",
+   "id": "2cc038d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d6bdb31",
+   "id": "32638dcb",
    "metadata": {},
    "source": [
     "Для начала, возьмем данные только за Q1 <br>\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "57a3ec1a",
+   "id": "cf1e2582",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6dc65819",
+   "id": "9c249d80",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c5d5654e",
+   "id": "006d8fcf",
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e376b741",
+   "id": "cfddc2eb",
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b955b2c4",
+   "id": "f6ff06d3",
    "metadata": {},
    "source": [
     "#### Перед тем как сделать .resample(), немного подготовим данные. Поместим колонку start_time в качестве индексов и сохраните изменения в исходный датасет."
@@ -306,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "49b1102e",
+   "id": "412969d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "bcb21664",
+   "id": "9766ffd5",
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cdd7c8f4",
+   "id": "335ff489",
    "metadata": {},
    "source": [
     "#### 1. В данных имеется как дата аренды, так и её точное время начала и окончания с точностью до секунд. Применим метод pd.resample() и агрегируем данные по дням. Посмотрим максимальное число аренд за день"
@@ -496,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "a7acfa0a",
+   "id": "abf66ff3",
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d08c9d79",
+   "id": "e3ca0cef",
    "metadata": {},
    "source": [
     "**Вывод:** максимально число аренд за день  было 27 февраля и составляло 4196"
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5b8d0dd",
+   "id": "0b9962da",
    "metadata": {},
    "source": [
     "#### 2. Посмотрим на распределение количества аренд для разных групп пользователей (usertype) — customers и subscribers в данных за апрель\n",
@@ -547,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "b64b66ab",
+   "id": "98705b32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +557,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "c4900066",
+   "id": "e245c226",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "830d0c35",
+   "id": "5b1d1366",
    "metadata": {},
    "outputs": [
     {
@@ -739,7 +739,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "b2497b0a",
+   "id": "d44bf32b",
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +824,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "c39fb342",
+   "id": "1d20818a",
    "metadata": {},
    "outputs": [
     {
@@ -878,7 +878,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1278d30c",
+   "id": "5bd572d3",
    "metadata": {},
    "source": [
     "**Вывод:** 18 апреля было 1453 аренды"
@@ -886,7 +886,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d49b250",
+   "id": "54b4cc2c",
    "metadata": {},
    "source": [
     "#### 3. Посмотрим на данные за период с апреля по декабрь.\n",
@@ -897,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "b2cd6e2c",
+   "id": "b0666fcb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -908,7 +908,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "da867b2d",
+   "id": "2f48739c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -929,7 +929,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "5916e74f",
+   "id": "90474c0e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -941,7 +941,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "16bca635",
+   "id": "2aef7fce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -951,7 +951,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "b57ec169",
+   "id": "166d3ef2",
    "metadata": {},
    "outputs": [
     {
@@ -972,7 +972,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "0c768458",
+   "id": "4c085dfd",
    "metadata": {},
    "outputs": [
     {
@@ -1125,7 +1125,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "fb54cc7e",
+   "id": "27aff6f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1135,7 +1135,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "8c056ad5",
+   "id": "70b86951",
    "metadata": {},
    "outputs": [
     {
@@ -1172,7 +1172,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "85475f4f",
+   "id": "7a433a65",
    "metadata": {},
    "outputs": [
     {
@@ -1297,7 +1297,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "9314bc58",
+   "id": "2f6438fd",
    "metadata": {},
    "outputs": [
     {
@@ -1361,19 +1361,378 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b33498d7",
+   "id": "a3945ace",
    "metadata": {},
    "source": [
     "**Вывод:** число аренд, сделанных customers, было больше, чем у subscribers 27 мая и 2 сентября, все остальные дни аренд было больше у subscribers"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "28dc938c",
+   "metadata": {},
+   "source": [
+    "#### 4. Более подробно посмотрим на летний период. Какой наиболее популярный пункт назначения?\n",
+    "В переменную bikes_summer сохраним наблюдения с 1 июня по 31 августа. Затем запишем в top_destination наиболее популярный пункт назначения. Сагрегируем данные по дням и определим, **в какой день в полученный пункт (top_destination) было совершено меньше всего поездок**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d34b1bef",
+   "execution_count": 116,
+   "id": "39c0a7cc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "bikes.reset_index(inplace=True)\n",
+    "bikes_summer = bikes.query(\"start_time >= '2018-06-01' & start_time <= '2018-08-31'\")\n",
+    "top_destination  = bikes_summer.to_station_name.value_counts().idxmax()\n",
+    "top_destination_bikes = bikes_summer.query(\"to_station_name == @top_destination\")\n",
+    "top_destination_bikes = top_destination_bikes.set_index('start_time')\n",
+    "bad_day = top_destination_bikes.resample(rule = 'D').to_station_name.count().idxmin()\n",
+    "bad_day = bad_day.strftime('%Y-%m-%d')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "cfa9d815",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Наиболее популярный пункт назначения - Streeter Dr & Grand Ave , 2018-06-21 было совершено меньше всего поездок в данный пункт\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Наиболее популярный пункт назначения -', top_destination, ',', \n",
+    "      bad_day, 'было совершено меньше всего поездок в данный пункт')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17e35eb8",
+   "metadata": {},
+   "source": [
+    "#### 5. Куда больше всего ездят на выходных?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "id": "5d88f938",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\mi\\AppData\\Local\\Temp/ipykernel_4132/415584076.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  bikes_summer['day_of_the_week'] = bikes_summer.start_time.dt.day_name()\n"
+     ]
+    }
+   ],
+   "source": [
+    "bikes_summer['day_of_the_week'] = bikes_summer.start_time.dt.day_name()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "id": "5f379b03",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>start_time</th>\n",
+       "      <th>trip_id</th>\n",
+       "      <th>end_time</th>\n",
+       "      <th>bikeid</th>\n",
+       "      <th>tripduration</th>\n",
+       "      <th>from_station_id</th>\n",
+       "      <th>from_station_name</th>\n",
+       "      <th>to_station_id</th>\n",
+       "      <th>to_station_name</th>\n",
+       "      <th>usertype</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>birthyear</th>\n",
+       "      <th>day_of_the_week</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>354916</th>\n",
+       "      <td>2018-06-01 00:04:40</td>\n",
+       "      <td>18709077</td>\n",
+       "      <td>2018-06-01 00:06:47</td>\n",
+       "      <td>3155</td>\n",
+       "      <td>127.0</td>\n",
+       "      <td>128</td>\n",
+       "      <td>Damen Ave &amp; Chicago Ave</td>\n",
+       "      <td>214</td>\n",
+       "      <td>Damen Ave &amp; Grand Ave</td>\n",
+       "      <td>Subscriber</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>1978.0</td>\n",
+       "      <td>Friday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>354917</th>\n",
+       "      <td>2018-06-01 00:06:08</td>\n",
+       "      <td>18709080</td>\n",
+       "      <td>2018-06-01 00:24:18</td>\n",
+       "      <td>2807</td>\n",
+       "      <td>1,090.0</td>\n",
+       "      <td>258</td>\n",
+       "      <td>Logan Blvd &amp; Elston Ave</td>\n",
+       "      <td>69</td>\n",
+       "      <td>Damen Ave &amp; Pierce Ave</td>\n",
+       "      <td>Customer</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Friday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>354918</th>\n",
+       "      <td>2018-06-01 00:08:01</td>\n",
+       "      <td>18709086</td>\n",
+       "      <td>2018-06-01 00:32:55</td>\n",
+       "      <td>2737</td>\n",
+       "      <td>1,494.0</td>\n",
+       "      <td>337</td>\n",
+       "      <td>Clark St &amp; Chicago Ave</td>\n",
+       "      <td>225</td>\n",
+       "      <td>Halsted St &amp; Dickens Ave</td>\n",
+       "      <td>Customer</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>1988.0</td>\n",
+       "      <td>Friday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>354919</th>\n",
+       "      <td>2018-06-01 00:09:02</td>\n",
+       "      <td>18709091</td>\n",
+       "      <td>2018-06-01 00:19:21</td>\n",
+       "      <td>6089</td>\n",
+       "      <td>619.0</td>\n",
+       "      <td>210</td>\n",
+       "      <td>Ashland Ave &amp; Division St</td>\n",
+       "      <td>56</td>\n",
+       "      <td>Desplaines St &amp; Kinzie St</td>\n",
+       "      <td>Subscriber</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>1987.0</td>\n",
+       "      <td>Friday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>354920</th>\n",
+       "      <td>2018-06-01 00:09:28</td>\n",
+       "      <td>18709092</td>\n",
+       "      <td>2018-06-01 00:14:44</td>\n",
+       "      <td>2352</td>\n",
+       "      <td>316.0</td>\n",
+       "      <td>240</td>\n",
+       "      <td>Sheridan Rd &amp; Irving Park Rd</td>\n",
+       "      <td>303</td>\n",
+       "      <td>Broadway &amp; Cornelia Ave</td>\n",
+       "      <td>Subscriber</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>1997.0</td>\n",
+       "      <td>Friday</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                start_time   trip_id            end_time  bikeid tripduration  \\\n",
+       "354916 2018-06-01 00:04:40  18709077 2018-06-01 00:06:47    3155        127.0   \n",
+       "354917 2018-06-01 00:06:08  18709080 2018-06-01 00:24:18    2807      1,090.0   \n",
+       "354918 2018-06-01 00:08:01  18709086 2018-06-01 00:32:55    2737      1,494.0   \n",
+       "354919 2018-06-01 00:09:02  18709091 2018-06-01 00:19:21    6089        619.0   \n",
+       "354920 2018-06-01 00:09:28  18709092 2018-06-01 00:14:44    2352        316.0   \n",
+       "\n",
+       "        from_station_id             from_station_name  to_station_id  \\\n",
+       "354916              128       Damen Ave & Chicago Ave            214   \n",
+       "354917              258       Logan Blvd & Elston Ave             69   \n",
+       "354918              337        Clark St & Chicago Ave            225   \n",
+       "354919              210     Ashland Ave & Division St             56   \n",
+       "354920              240  Sheridan Rd & Irving Park Rd            303   \n",
+       "\n",
+       "                  to_station_name    usertype  gender  birthyear  \\\n",
+       "354916      Damen Ave & Grand Ave  Subscriber  Female     1978.0   \n",
+       "354917     Damen Ave & Pierce Ave    Customer     NaN        NaN   \n",
+       "354918   Halsted St & Dickens Ave    Customer    Male     1988.0   \n",
+       "354919  Desplaines St & Kinzie St  Subscriber    Male     1987.0   \n",
+       "354920    Broadway & Cornelia Ave  Subscriber    Male     1997.0   \n",
+       "\n",
+       "       day_of_the_week  \n",
+       "354916          Friday  \n",
+       "354917          Friday  \n",
+       "354918          Friday  \n",
+       "354919          Friday  \n",
+       "354920          Friday  "
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bikes_summer.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "e8f81cf7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>day_of_the_week</th>\n",
+       "      <th>from_station_name</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Saturday</th>\n",
+       "      <th>Streeter Dr &amp; Grand Ave</th>\n",
+       "      <td>2814</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sunday</th>\n",
+       "      <th>Streeter Dr &amp; Grand Ave</th>\n",
+       "      <td>2119</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Saturday</th>\n",
+       "      <th>Lake Shore Dr &amp; Monroe St</th>\n",
+       "      <td>1536</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Tuesday</th>\n",
+       "      <th>Canal St &amp; Adams St</th>\n",
+       "      <td>1535</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wednesday</th>\n",
+       "      <th>Canal St &amp; Adams St</th>\n",
+       "      <td>1493</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Saturday</th>\n",
+       "      <th>Lake Shore Dr &amp; North Blvd</th>\n",
+       "      <td>1475</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wednesday</th>\n",
+       "      <th>Streeter Dr &amp; Grand Ave</th>\n",
+       "      <td>1428</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Monday</th>\n",
+       "      <th>Canal St &amp; Adams St</th>\n",
+       "      <td>1424</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thursday</th>\n",
+       "      <th>Canal St &amp; Adams St</th>\n",
+       "      <td>1412</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Friday</th>\n",
+       "      <th>Streeter Dr &amp; Grand Ave</th>\n",
+       "      <td>1407</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               0\n",
+       "day_of_the_week from_station_name               \n",
+       "Saturday        Streeter Dr & Grand Ave     2814\n",
+       "Sunday          Streeter Dr & Grand Ave     2119\n",
+       "Saturday        Lake Shore Dr & Monroe St   1536\n",
+       "Tuesday         Canal St & Adams St         1535\n",
+       "Wednesday       Canal St & Adams St         1493\n",
+       "Saturday        Lake Shore Dr & North Blvd  1475\n",
+       "Wednesday       Streeter Dr & Grand Ave     1428\n",
+       "Monday          Canal St & Adams St         1424\n",
+       "Thursday        Canal St & Adams St         1412\n",
+       "Friday          Streeter Dr & Grand Ave     1407"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bikes_summer.groupby(['day_of_the_week', 'from_station_name']).size().nlargest(10).to_frame()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f4b2fcfc",
+   "metadata": {},
+   "source": [
+    "**Выводы:** <br>\n",
+    "    - Наиболее популярный пункт назначения в субботу – Streeter Dr & Grand Ave<br>\n",
+    "    - Второй по числу поездок в субботу – Lake Shore Dr & North Blvd<br>\n",
+    "    - В будние дни больше всего поездок совершается до Streeter Dr & Grand Ave"
+   ]
   }
  ],
  "metadata": {
